# GameComms

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md
.github/workflows/: documentation.yaml
client/src/: main.cpp
docs/: DebugLog_8cpp.js  DebugLog_8cpp__incl.md5  GameBTCommsNotify_8cpp__incl.md5  GameBTComms_8cpp.html  GameBTComms_8cpp.js  GameBTComms_8cpp__incl.md5  GameBTComms_8h.html  GameBTComms_8h.js  GameBTComms_8h_source.html  SGEDebugLog_8h__dep__incl.md5  classCGameBTComms-members.html  classCGameBTComms.html  classCGameBTComms.js  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_2.map  inherits.html  navtreeindex0.js  structCGameBTComms_1_1TMessageQueue.html
docs/search/: all_10.js  all_11.js  all_9.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  files_2.js  functions_0.js  functions_7.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
github-pages-deploy-action-temp-deployment-folder/client/: platformio.ini
github-pages-deploy-action-temp-deployment-folder/client/src/: main.cpp
github-pages-deploy-action-temp-deployment-folder/docs/: DebugLog_8cpp.html  GameBTCommsConsts_8h__dep__incl.md5  GameBTComms_8cpp.html  GameBTComms_8cpp.js  GameBTComms_8cpp__incl.map  GameBTComms_8cpp__incl.md5  GameBTComms_8h_source.html  annotated.html  annotated_dup.js  classes.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  navtreeindex0.js  structCGameBTComms_1_1TMessageQueue-members.html  structCGameBTComms_1_1TMessageQueue.js
github-pages-deploy-action-temp-deployment-folder/docs/search/: all_e.js  all_f.js  classes_2.js  classes_3.js  files_0.js  files_1.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_c.js  pages_1.js
github-pages-deploy-action-temp-deployment-folder/github-pages-deploy-action-temp-deployment-folder/client/: platformio.ini
github-pages-deploy-action-temp-deployment-folder/github-pages-deploy-action-temp-deployment-folder/docs/: DebugLog_8cpp.html  DebugLog_8cpp.js  DebugLog_8h__dep__incl.md5  classCGameBTComms.html  classCGameBTComms__inherit__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  md_LICENSE.html  menudata.js  navtreedata.js
github-pages-deploy-action-temp-deployment-folder/github-pages-deploy-action-temp-deployment-folder/docs/search/: all_2.js  all_8.js  classes_0.js  variables_1.js
github-pages-deploy-action-temp-deployment-folder/github-pages-deploy-action-temp-deployment-folder/github-pages-deploy-action-temp-deployment-folder/docs/: SGEDebugLog_8cpp__incl.map  SGEDebugLog_8cpp__incl.md5  classCGameBTComms__inherit__graph.map  classRSGEDebugLog-members.html  classRSGEDebugLog.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html
github-pages-deploy-action-temp-deployment-folder/github-pages-deploy-action-temp-deployment-folder/github-pages-deploy-action-temp-deployment-folder/docs/search/: all_e.js  all_f.js  defines_0.js  functions_0.js
github-pages-deploy-action-temp-deployment-folder/github-pages-deploy-action-temp-deployment-folder/github-pages-deploy-action-temp-deployment-folder/src/: GameBTCommsNotify.cpp
github-pages-deploy-action-temp-deployment-folder/github-pages-deploy-action-temp-deployment-folder/include/Bluetooth/: BTServiceSearcher.h  MessageClient.h
github-pages-deploy-action-temp-deployment-folder/github-pages-deploy-action-temp-deployment-folder/src/: DebugLog.cpp  GameBTComms.cpp
github-pages-deploy-action-temp-deployment-folder/github-pages-deploy-action-temp-deployment-folder/src/Bluetooth/: MessageServiceSearcher.cpp
github-pages-deploy-action-temp-deployment-folder/include/: GameBTComms.h  SGEDebugLog.h
include/: GameBTComms.h  GameBTCommsConsts.h  GameBTCommsNotify.h
include/Bluetooth/: MessageClient.h  MessageServer.h  MessageServiceSearcher.h
include/Misc/: minGlue.h
src/: DebugLog.c  DebugLog.cpp  GameBTComms.cpp  GameBTCommsNotify.cpp  MessageClient.cpp
src/Bluetooth/: BTServiceSearcher.cpp  MessageClient.cpp  MessageServer.cpp
